appId: com.example.ecommerece_riverpod
name: Login Flow
---
- launchApp

- tapOn:
    text: "Login"
- tapOn:
    id: "emailField"
- inputText: "testuser@example.com"
- tapOn:
    id: "passwordField"
- inputText: "password123"
- tapOn:
    text: "Sign In"
- assertVisible:
    text: "Welcome back"
